Fix making todo list too wide

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -94,7 +94,7 @@ i {
 }
 
 .todo-list {
-  min-width: 400px;
+  min-width: 350px;
   width: 50%;
   margin: 2% auto;
 }
